Bug 192529 - ktextedit should not capture find/replace keystrokes when find/replace is disabled
Summary: ktextedit should not capture find/replace keystrokes when find/replace is dis...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-13 04:26 UTC by fontknocker
Modified: 2009-05-13 05:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (997 bytes, patch)
2009-05-13 05:02 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fontknocker 2009-05-13 04:26:07 UTC
Version:            (using KDE 4.2.3)
Installed from:    Ubuntu Packages

When find/replace is disabled KTextEdit correctly removes the entries from the context popup menu as expected. However, KTextEdit still captures the find/replace keystrokes (Ctrl+F, Ctrl+R, etc).

When find/replace is disabled KTextEdit should make sure it does not respond to these keystrokes.
Comment 1 Dario Andres 2009-05-13 05:02:21 UTC
Created attachment 33602 [details]
Proposed patch

Do not call the find/findNext/replace actions when shortcuts are pressed but the findNextOption was disabled explicity.
Comment 2 fontknocker 2009-05-13 05:40:04 UTC
Re above patch: my personal belief is that KTextEdit should not filter the keystrokes at all if find/replace is disabled. That will then allow those keystrokes to be handled elsewhere.
Comment 3 Dario Andres 2009-05-13 05:41:09 UTC
SVN commit 967261 by darioandres:

Do not call the find/findNext/replace actions when their shortcuts are pressed
but the findReplaceEnabled option was explicity disabled

BUG: 192529


 M  +5 -3      ktextedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=967261
Comment 4 Dario Andres 2009-05-13 05:46:50 UTC
SVN commit 967263 by darioandres:

Backport of 4.2branch of:
SVN commit 967261 by darioandres:

Do not call the find/findNext/replace actions when their shortcuts are pressed
but the findReplaceEnabled option was explicity disabled

CCBUG: 192529


 M  +5 -3      ktextedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=967263