Do not call the find/findNext/replace actions when their shortcuts are pressed but the findReplaceEnabled option was explicity disabled

BUG: 192529

svn path=/trunk/KDE/kdelibs/; revision=967261